--- a/Crawling-Data/Crawl_data_twitter.ipynb
+++ b/Crawling-Data/Crawl_data_twitter.ipynb
@@ -5,7 +5,7 @@
       "source": [
         "Instruksi:\n",
         "1. Buka Google Collabs\n",
-        "2. Login ke akun twitter, cari & copy token twitter (inspect element) 24a76cc671736a1b11b1d6d134dd688e2b1bca8e\n",
+        "2. Login ke akun twitter, cari & copy token twitter (inspect element) [api X / twitter]\n",
         "3. Instal package pandas\n",
         "4. Kode python crawling data twitter dan masukkan token auth twitter\n",
         "5. Download hasil crawling dengan file csv\n",
